Added entrypoint in Dockerfiles in control

--- a/example_control/Dockerfile
+++ b/example_control/Dockerfile
@@ -20,7 +20,8 @@ MAINTAINER Yue Kang yuek@chalmers.se
 RUN apk update && \
     apk --no-cache add \
         libstdc++ libgcc && \
-    mkdir /opt
-WORKDIR /opt
+    mkdir /opt/example
+WORKDIR /opt/example
 COPY --from=builder /tmp/example .
 CMD ["/opt/example --cid=112"]
+ENTRYPOINT ["/opt/example"]
